[client] fix star_rate z-index with menu, refactor
- added custom hook to anime-page
- removed unnecessary elements
- other a little fixes

--- a/client/src/widgets/anime_general_info/ui/styles.module.scss
+++ b/client/src/widgets/anime_general_info/ui/styles.module.scss
@@ -18,7 +18,7 @@
       .rate_star {
          top: 5px;
          right: 5px;
-         z-index: 5;
+         z-index: 1;
          position: absolute;
          background: url("../assets/rate-star.svg");
          width: 25px;
